--- a/css/slider.less
+++ b/css/slider.less
@@ -53,7 +53,7 @@
     }
     li.active {
       a {
-        background: #35c5f4;
+        background: #8e2222;
         box-shadow: none;
         width: 8px;
         height: 8px;
