--- a/css/theme.less
+++ b/css/theme.less
@@ -77,6 +77,12 @@ header {
   margin-bottom: -20px;
 }
 
+.summary-text {
+  margin-top: 20px; 
+  text-align: center; 
+  font-size: 1.2em;
+}
+
 .features {
   margin-top: 70px;
   margin-bottom: -20px;
@@ -152,7 +158,7 @@ header {
       background-color: @droneTeal;
       text-align: center;
       margin: 25px auto 0;
-      width: 50%;
+      width: 75%;
       display: block;
       padding: 3px 0;
       color: #ffffff;
