update download links to nightly and fixups some items
formatting autodone by vscode

--- a/src/sections/downloads-v1/bsd.marko
+++ b/src/sections/downloads-v1/bsd.marko
@@ -2,9 +2,9 @@
   <install-step title="Installation">
     <p>
       The Readarr team provides
-      <a href="https://readarr.servarr.com/v1/update/develop/updatefile?os=bsd&arch=x64&runtime=netcore">builds for BSD</a>.<br/>
+      <a href="https://readarr.servarr.com/v1/update/nightly/updatefile?os=bsd&arch=x64&runtime=netcore">builds for BSD</a>.<br/>
       Additional details can be found on Frank's GH
-      <a href="https://github.com/Thefrank/freebsd-port-sooners/blob/main/Radarr_Installation_TrueNAS_GUI.md/">Link</a>
+      <a href="https://github.com/Thefrank/freebsd-port-sooners/">Link</a>
     </p>
   </install-step>
 </install-steps>
