--- a/src/sections/downloads-v1/docker.marko
+++ b/src/sections/downloads-v1/docker.marko
@@ -55,7 +55,7 @@
       <ul>
         <li>
           <h5>
-            <a href="https://ghcr.io/hotio/readarr:latest">ghcr.io/hotio/readarr:release</a>
+            <a href="https://ghcr.io/hotio/readarr:nightly">ghcr.io/hotio/readarr:nightly</a>
           </h5>
           <p>
             <a href="https://hotio.dev">hotio</a>
@@ -68,7 +68,7 @@
         </li>
         <li>
           <h5>
-            <a href="https://ghcr.io/linuxserver/readarr:latest">ghcr.io/linuxserver/readarr:latest</a>
+            <a href="https://ghcr.io/linuxserver/readarr:nightly">ghcr.io/linuxserver/readarr:nightly</a>
           </h5>
           <p>
             <a href="https://www.linuxserver.io">linuxserver.io</a>
