--- a/src/sections/downloads-v1/linux.marko
+++ b/src/sections/downloads-v1/linux.marko
@@ -10,21 +10,20 @@
     <tabview-pane id="downloads-v1-linux-other">
       <install-description>
         <alert level="info">
-          Please contact us if you wish to port Readarr v3 for any other distribution that the ones already listed.<br/>
-          Readarr v0.2 was supported by various third-parties on other platforms and we prefer to coordinate the port of v3.
+          Please contact us if you wish to port Readarr for any other distribution that the ones already listed.<br/>
         </alert>
         <p>Generic .tar.gz downloads are available for linux, but dependencies, installation and permissions will need to be done manually.</p>
         <div>
-          <a class="btn btn-readarr" href="https://readarr.servarr.com/v1/update/develop/updatefile?os=linux&runtime=netcore&arch=x64">Download Linux x64 (netcore)</a>
+          <a class="btn btn-readarr" href="https://readarr.servarr.com/v1/update/nightly/updatefile?os=linux&runtime=netcore&arch=x64">Download Linux x64 (netcore)</a>
         </div>
         <div>
-          <a class="btn btn-readarr" href="https://readarr.servarr.com/v1/update/develop/updatefile?os=linux&runtime=netcore&arch=arm">Download Linux arm (netcore)</a>
+          <a class="btn btn-readarr" href="https://readarr.servarr.com/v1/update/nightly/updatefile?os=linux&runtime=netcore&arch=arm">Download Linux arm (netcore)</a>
         </div>
         <div>
-          <a class="btn btn-readarr" href="https://readarr.servarr.com/v1/update/develop/updatefile?os=linux&runtime=netcore&arch=arm64">Download Linux arm64 (netcore)</a>
+          <a class="btn btn-readarr" href="https://readarr.servarr.com/v1/update/nightly/updatefile?os=linux&runtime=netcore&arch=arm64">Download Linux arm64 (netcore)</a>
         </div>
         <div>
-          <a class="btn btn-readarr" href="https://readarr.servarr.com/v1/update/develop/updatefile?os=linuxmusl&runtime=netcore&arch=x64">Download Linux Musl x64 (netcore)</a>
+          <a class="btn btn-readarr" href="https://readarr.servarr.com/v1/update/nightly/updatefile?os=linuxmusl&runtime=netcore&arch=x64">Download Linux Musl x64 (netcore)</a>
         </div>
       </install-description>
     </tabview-pane>
