--- a/src/components/site-navbar.marko
+++ b/src/components/site-navbar.marko
@@ -17,7 +17,7 @@
                 <navbar-item href="#features" icon="fas-star"> FEATURES</navbar-item>
                 <navbar-item href="#download" icon="fas-download"> DOWNLOAD</navbar-item>
                 <navbar-item href="#support" icon="fas-question-circle"> SUPPORT</navbar-item>
-                <navbar-item href="https://opencollective.com/Readarr" icon="fas-heart"> DONATE</navbar-item>
+                <navbar-item href="/donate" icon="fas-heart"> DONATE</navbar-item>
                 <navbar-item href="https://github.com/Readarr/Readarr" target="_blank" icon="fab-github-alt"> GITHUB</navbar-item>
             </ul>
         </div>
