--- a/src/components/site-layout.marko
+++ b/src/components/site-layout.marko
@@ -53,7 +53,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.1/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     <script src="js/theme.js"></script>
-
     <script type="text/javascript" src="js/index-slider.js"></script>
+    <script type="text/javascript">
+      if(window.location.hash.toLocaleLowerCase()=== "#donate"){
+        window.location.replace("https://lidarr.audio/donate");
+      }
+    </script>
 </body>
 </html>
