--- a/src/components/site-layout.marko
+++ b/src/components/site-layout.marko
@@ -56,7 +56,7 @@
     <script type="text/javascript" src="js/index-slider.js"></script>
     <script type="text/javascript">
       if(window.location.hash.toLocaleLowerCase()=== "#donate"){
-        window.location.replace("https://lidarr.audio/donate");
+        window.location.replace("https://readarr.com/donate");
       }
     </script>
 </body>
