--- a/src/sections/downloads-v1/linux.marko
+++ b/src/sections/downloads-v1/linux.marko
@@ -10,8 +10,7 @@
     <tabview-pane id="downloads-v1-linux-other">
       <install-description>
         <alert level="info">
-          Please contact us if you wish to port Readarr v3 for any other distribution that the ones already listed.<br/>
-          Readarr v0.2 was supported by various third-parties on other platforms and we prefer to coordinate the port of v3.
+          Please contact us if you wish to port Readarr for any other distribution that the ones already listed.<br/>
         </alert>
         <p>Generic .tar.gz downloads are available for linux, but dependencies, installation and permissions will need to be done manually.</p>
         <div>
