--- a/src/sections/downloads-v1/windows.marko
+++ b/src/sections/downloads-v1/windows.marko
@@ -1,30 +1,15 @@
 <install-steps>
-    <install-step title="Introduction">
-        <p>
-            Readarr is supported natively on Windows. Readarr can be installed on Windows as Windows Service or system tray application.
-        </p>
-        <p>
-            A Windows Service runs even when the user is not logged in, but special case must be taken since Windows Services cannot access network drives (\\server\share or X:\ mapped drives) without special configuration steps.<br/>
-            It's therefore advisable to install Readarr as a system tray application if the user does not need to log out, the option to do so is provided during the installer.
-        </p>
-        <alert level="warning">Readarr v0.8 no longer supports Windows XP. At this time Windows 7 <i>should</i> still work, but we will not maintain Windows 7 support. Note that KB2533623 and Microsoft Visual C++ 2015 Redistributable Update 3 are needed to run .net core apps on Windows 7</alert>
-    </install-step>
-    <install-step num="1" title="Install Readarr">
-        <p>
-            Download the Windows Installer with the following link and execute it.
-        </p>
-        <a class="btn btn-readarr" href="https://Readarr.servarr.com/v1/update/develop/updatefile?os=windows&runtime=netcore&arch=x64&installer=true">Download Windows x64 Installer</a>
-        <a class="btn btn-readarr" href="https://Readarr.servarr.com/v1/update/develop/updatefile?os=windows&runtime=netcore&arch=x86&installer=true">Download Windows x86 Installer</a>
-    </install-step>
-    <install-step num="2" title="View Readarr">
-        <p>
-            Browse to <code>http://localhost:8787</code> to start using Readarr.
-        </p>
-    </install-step>    
+  <install-step title="Installation">
+    <p>
+      Please see our Servarr Wiki for installation instructions.
+      <a href="https://wiki.servarr.com/readarr/installation#windows">Link</a>
+    </p>
+  </install-step>
 </install-steps>
 <install-alternatives id="downloads-v1-windows-alternatives">
-    <h5>Manual Install</h5>
-    <p>
-        It is possible to install Readarr manually using the x64 <a href="https://Readarr.servarr.com/v1/update/develop/updatefile?os=windows&runtime=netcore&arch=x64">.zip download</a>. However in that case you must manually deal with dependencies, installation and permissions.
-    </p>
+  <h5>Manual Install</h5>
+  <p>
+    It is possible to install Readarr manually using the x64
+    <a href="https://readarr.servarr.com/v1/update/develop/updatefile?os=windows&runtime=netcore&arch=x64">.zip download</a>. However in that case you must manually deal with dependencies, installation and permissions.
+  </p>
 </install-alternatives>
