--- a/src/sections/downloads-v1/bsd.marko
+++ b/src/sections/downloads-v1/bsd.marko
@@ -2,9 +2,9 @@
   <install-step title="Installation">
     <p>
       The Readarr team provides
-      <a href="https://readarr.servarr.com/v1/update/develop/updatefile?os=bsd&arch=x64&runtime=netcore">builds for BSD</a>.<br/>
-      Additional details can be found on Frank's GH
-      <a href="https://github.com/Thefrank/freebsd-port-sooners/blob/main/Radarr_Installation_TrueNAS_GUI.md/">Link</a>
+      <a href="https://readarr.servarr.com/v1/update/develop/updatefile?os=bsd&arch=x64&runtime=netcore">builds for BSD and the BSD Community creates the Port</a>.<br/>
+      Please see our Servarr Wiki for installation instructions.
+      <a href="https://wiki.servarr.com/readarr/installation#freebsd">Link</a>
     </p>
   </install-step>
 </install-steps>
