--- a/src/sections/downloads-v1/linux-debianubuntu.marko
+++ b/src/sections/downloads-v1/linux-debianubuntu.marko
@@ -1,9 +1,8 @@
 <install-steps>
   <install-step title="Installation">
     <p>
-      The community has put together an
-      <a href="https://wiki.servarr.com/readarr/installation#linux">Installation Guide</a>
-      to help you install this on Debian or Ubuntu.
+      Please see our Servarr Wiki for installation instructions.
+      <a href="https://wiki.servarr.com/readarr/installation#linux">Link</a>
     </p>
   </install-step>
 </install-steps>
