--- a/src/sections/downloads-v1/macos.marko
+++ b/src/sections/downloads-v1/macos.marko
@@ -7,7 +7,7 @@
   </install-step>
   <install-step num="2" title="Install App">
     <p>Open the archive and drag the Readarr icon to your Application folder.</p>
-    <alert level="warning">Readarr is not compatible with OSX versions < 10.13 (High Sierra) due to netcore incompatibilities.</alert>
+    <alert level="warning">Readarr is not compatible with OSX versions < 10.15 (Catalina) due to .NET incompatibilities.</alert>
   </install-step>
   <install-step num="3" title="Start Readarr">
     <p>Open Readarr.app in your Application folder.</p>
