--- a/src/sections/downloads-v1/windows.marko
+++ b/src/sections/downloads-v1/windows.marko
@@ -5,8 +5,8 @@
       <a href="https://wiki.servarr.com/readarr/installation#windows"> installation instructions.</a>
     </p>
   <p>Download the Windows Installer with the following link and execute it.</p>
-  <a class="btn btn-radarr" href="https://readarr.servarr.com/v1/update/develop/updatefile?os=windows&runtime=netcore&arch=x64&installer=true">Download Windows x64 Installer</a>
-  <a class="btn btn-radarr" href="https://readarr.servarr.com/v1/update/develop/updatefile?os=windows&runtime=netcore&arch=x86&installer=true">Download Windows x86 Installer</a>
+  <a class="btn btn-readarr" href="https://readarr.servarr.com/v1/update/develop/updatefile?os=windows&runtime=netcore&arch=x64&installer=true">Download Windows x64 Installer</a>
+  <a class="btn btn-readarr" href="https://readarr.servarr.com/v1/update/develop/updatefile?os=windows&runtime=netcore&arch=x86&installer=true">Download Windows x86 Installer</a>
   </install-step>
 </install-steps>
 <install-alternatives id="downloads-v1-windows-alternatives">
