--- a/css/donate.less
+++ b/css/donate.less
@@ -26,15 +26,9 @@ body {
 
 .modal-body {
   text-align: center;
-  input {
-    margin-top: 20px;
-    // font-si-ze: 30px;
-    width: 310px;
+  img {
+    margin-bottom: 20px;
   }
-}
-
-.price {
-  margin-bottom: 20px;
 }
 
 .donate {
@@ -56,7 +50,11 @@ body {
   }
 }
 
-.btn {
+.price {
+  margin-bottom: 20px;
+}
+
+.donate-option {
   min-width: 200px;
   margin-bottom: 20px;
   font-size: 20px;
