Removed Reddit link and added Arm OSX download link

--- a/src/sections/downloads-v1/macos.marko
+++ b/src/sections/downloads-v1/macos.marko
@@ -3,7 +3,8 @@
     <p>The easiest way to install Readarr on macOS is to use the App archive with the steps described below.</p>
   </install-step>
   <install-step num="1" title="Download App package">
-    <a class="btn btn-readarr" href="https://readarr.servarr.com/v1/update/develop/updatefile?os=osx&runtime=netcore&arch=x64&installer=true">Download macOS App</a>
+    <a class="btn btn-readarr" href="https://readarr.servarr.com/v1/update/develop/updatefile?os=osx&runtime=netcore&arch=x64&installer=true">Download Intel macOS App</a>
+    <a class="btn btn-readarr" href="https://readarr.servarr.com/v1/update/develop/updatefile?os=osx&runtime=netcore&arch=arm64&installer=true">Download Arm macOS App</a>
   </install-step>
   <install-step num="2" title="Install App">
     <p>Open the archive and drag the Readarr icon to your Application folder.</p>
@@ -27,7 +28,7 @@
   <h5>Manual Install</h5>
   <p>
     It is possible to install Readarr manually using the
-    <a href="https://readarr.servarr.com/v1/update/develop/updatefile?os=osx&runtime=netcore&arch=x64">.tar.gz download</a>. However in that case you must manually deal with dependencies, installation and permissions.
+    <a href="https://readarr.servarr.com/v1/update/develop/updatefile?os=osx&runtime=netcore&arch=x64">Intel .tar.gz download</a> or <a href="https://readarr.servarr.com/v1/update/develop/updatefile?os=osx&runtime=netcore&arch=arm64">Arm .tar.gz download</a>. However in that case you must manually deal with dependencies, installation and permissions.
   </p>
   <h5>Docker container</h5>
   <p>
