--- a/src/components/site-layout.marko
+++ b/src/components/site-layout.marko
@@ -1,13 +1,13 @@
 <html>
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-H9DLX878J1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3JJ0HDENW3"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
-        gtag('config', 'G-H9DLX878J1');
+        gtag('config', 'G-3JJ0HDENW3');
     </script>
 
     <title>Readarr</title>
