--- a/src/sections/downloads-v1/linux-archlinux.marko
+++ b/src/sections/downloads-v1/linux-archlinux.marko
@@ -18,7 +18,7 @@
       For example, to use
       <a href="https://github.com/Jguer/yay">yay</a>
       to install the readarr package:
-      <pre><code class="bash">yay -S readarr</code></pre>
+      <pre><code class="bash">yay -S readarr-bin</code></pre>
     </p>
   </install-step>
   <install-step num="2" title="Start Readarr">
