--- a/src/sections/downloads-v1/downloads-v1.marko
+++ b/src/sections/downloads-v1/downloads-v1.marko
@@ -17,7 +17,7 @@
     <tabview-pane id="downloads-v1-bsd" file="downloads-v1/bsd.marko"/>
     <tabview-pane id="downloads-v1-other">
       <alert level="info">
-        Please contact us if you wish to port Readarr for any other platform that the ones already listed.<br/>
+        Please contact us if you wish to port Readarr for any other platform than the ones already listed.<br/>
       </alert>
     </tabview-pane>
   </div>
